# rosns3

./: .gitmodules  CMakeLists.txt  package.xml  readme.md  run_server.sh  stop_server.sh  wscript
config/: custom_rosconsole.conf
doc/: rosns3.rst
examples/: comm_model.cc  comm_model.h  rosns3-example.cc  utils.cc  utils.h  wscript
examples/messages/: network_routing.fbs  states.fbs  states_generated.h
examples/scripts/: rss_script.cc
helper/: rosns3-helper.cc  rosns3-helper.h
include/rosns3_client/: Drone.h  client.h  utils.h
launch/: rosns3_client.launch
model/: rosns3.cc  rosns3.h
rosns3_client/: CMakeLists.txt  package.xml
rosns3_client/config/: custom_rosconsole.conf
rosns3_client/include/messages/: neighborhoods.fbs  neighborhoods_generated.h  network_routing_generated.h
rosns3_client/include/rosns3_client/: Robot.h  utils.h
rosns3_client/launch/: rosns3_client.launch
rosns3_client/src/: Drone.cpp  Robot.cpp  client.cpp  utils.cpp
rosns3_examples/: CMakeLists.txt  package.xml
scripts/: 100samples.fig  100samples_trimmed.fig  avg_dis_plot.m  avg_entrees.txt  channel_mode_fink.m  coop_cov.eps  fading.eps  fading_trimmed.eps  hops.txt  hops_plot.eps  hops_plot.fig  hops_plot_.eps  hops_plot_.fig  mseb.m  plot_areaErrorBar.m  rss_normal.eps  rss_normal.fig  rss_normal_small.eps  rss_plot.m  rss_script.cc
src/: client.cpp  rosns3_client.cpp  utils.cpp
test/: rosns3-test-suite.cc
